syntax = "proto3";

option csharp_namespace = "Accounts.Api";

package Accounts;

import "google/protobuf/empty.proto";

service AccountsPlatformApi
{
  // commands
  rpc ProvisionAccount (ProvisionAccountRequest) returns (google.protobuf.Empty);
  rpc VerifyUser(VerifyUserRequest) returns (google.protobuf.Empty);
  
  // queries
  rpc ListAccountSummaries (ListAccountSummariesRequest) returns (ListAccountSummariesReply);
  rpc GetAccountSummary (GetAccountSummaryRequest) returns (AccountSummary);
  rpc GetEmailVerificationToken (GetEmailVerificationTokenRequest) returns (EmailVerificationToken);
}

// commands
message ProvisionAccountRequest{
  string account_id = 1;
  string name = 2;
  string user_id = 3;
  string email = 4;
}
message VerifyUserRequest{
  string email = 1;
  string token = 2;
  string password = 3;
}

// queries

message ListAccountSummariesRequest{
}
message GetAccountSummaryRequest{
  string account_id = 1;
}
message GetEmailVerificationTokenRequest{
  string user_id = 1;
}

message ListAccountSummariesReply{
  repeated AccountSummary Accounts = 1;
}


// Dto

message AccountSummary{
  string account_id = 1;
  string name = 2;
}
message EmailVerificationToken{
  string token = 1;
}